--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Allsop Tutoring</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,15 +17,15 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p><!--[-->I got reprogrammed by a rogue AI<!--]--><br />
-					<!--[-->and now I'm totally cray<!--]--></p>
+					<h1 id="logo"><a href="#">John Allsop</a></h1>
+					<p><!--[-->Experienced MCAT Tutor in the NYC Area<!--]--><br />
+					<!--[-->99th+ Percentile<!--]--></p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#two">Things I Can Do For You</a></li>
+						<li><a href="#three">Testimonials</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -53,11 +53,11 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p><!--[-->Just an incredibly simple responsive site<!--]--><br />
-										<!--[-->template freebie by <a href="http://html5up.net">HTML5 UP</a><!--]-->.</p>
+										<h2>Allsop Tutoring</h2>
+										<p><!--[-->Experience tutoring from a 99th+ perncetile MCATer<!--]--><br />
+										<!--[--><!--]-->.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>provide MCAT tutoring both remotely and in-person. I have a 99th percentile MCAT score, with a 100th percentile score on C/P, B/B, and 99th percentile on P/S.</p>
 								</div>
 							</section>
 
