--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<html>
+	<head>
+		<title>Allsop Tutoring</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
 <!-- Header -->
 <section id="header"><header><span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 <h1 id="logo"><a href="#">John Allsop</a></h1>
