--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Allsop Tutoring</title>
@@ -6,100 +7,126 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-<!-- Header -->
-<section id="header"><header><span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-<h1 id="logo"><a href="#">John Allsop</a></h1>
-<p><!--[-->Experienced MCAT Tutor in the NYC<!--]--><br /> <!--[-->99th+ Percentile<!--]--></p>
-</header><nav id="nav">
-<ul>
-<li><a class="active" href="#one">About</a></li>
-<li><a href="#two">Things I Can Do For You</a></li>
-<li><a href="#three">Testimonials</a></li>
-<li><a href="#four">Contact Me</a></li>
-</ul>
-</nav><footer>
-<ul class="icons">
-<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-<li><a class="icon fa-instagram" href="#"><span class="label">Instagram</span></a></li>
-<li><a class="icon fa-envelope" href="#"><span class="label">Email</span></a></li>
-</ul>
-</footer></section>
-<!-- Wrapper -->
-<div id="wrapper"><!-- Main -->
-<div id="main"><!-- One -->
-<section id="one">
-<div class="image main" data-position="center"><img src="images/banner.jpg" alt="" /></div>
-<div class="container"><header class="major">
-<h2>Allsop Tutoring</h2>
-<p><!--[-->Experience tutoring from a 99th+ perncetile MCATer<!--]--><br /> <!--[--><!--]--></p>
-</header>
-<p>I provide MCAT tutoring both remotely and in-person. I have a 99th percentile MCAT score, with a 100th percentile score on C/P, B/B, and 99th percentile on P/S.</p>
-</div>
-</section>
-<!-- Two -->
-<section id="two">
-<div class="container">
-<h3>Things I Can Do</h3>
-<p>I have experience with</p>
-<ul class="feature-icons">
-<li class="fa-code"><!--[-->Write all the code<!--]--></li>
-<li class="fa-cubes"><!--[-->Stack small boxes<!--]--></li>
-<li class="fa-book"><!--[-->Read books and stuff<!--]--></li>
-<li class="fa-coffee"><!--[-->Drink much coffee<!--]--></li>
-<li class="fa-bolt"><!--[-->Lightning bolt<!--]--></li>
-<li class="fa-users"><!--[-->Shadow clone technique<!--]--></li>
-</ul>
-</div>
-</section>
-<!-- Three -->
-<section id="three">
-<div class="container">
-<h3>Testimonials</h3>
-<p>Hear from others like you</p>
-<div class="features">
-<article><a class="image" href="#"><img src="images/pic01.jpg" alt="" /></a>
-<div class="inner">
-<h4><!--[-->Lady #1<!--]--></h4>
-<p>"Quote from them"</p>
-</div>
-</article>
-<article><a class="image" href="#"><img src="images/pic02.jpg" alt="" /></a>
-<div class="inner">
-<h4><!--[-->Lady #2<!--]--></h4>
-<p>"Dope."</p>
-</div>
-</article>
-<article><a class="image" href="#"><img src="images/pic03.jpg" alt="" /></a>
-<div class="inner">
-<h4><!--[-->Lady #3<!--]--></h4>
-<p>"He'll get you that score."</p>
-</div>
-</article>
-</div>
-</div>
-</section>
-<!-- Four -->
-<section id="four">
-<div class="container">
-<h3>Contact Me</h3>
-<p>Fill out the form below for a free consultation about studying for the MCAT.</p>
-<form action="#" method="post">
-<div class="row gtr-uniform">
-<div class="col-6 col-12-xsmall"><input id="name" name="name" type="text" placeholder="Name" /></div>
-<div class="col-6 col-12-xsmall"><input id="email" name="email" type="email" placeholder="Email" /></div>
-<div class="col-12"><input id="subject" name="subject" type="text" placeholder="Subject" /></div>
-<div class="col-12"><textarea id="message" name="message" rows="6" placeholder="Message"></textarea></div>
-<div class="col-12">
-<ul class="actions">
-<li><input class="primary" type="submit" value="Send Message" /></li>
-<li><input type="reset" value="Reset Form" /></li>
-</ul>
-</div>
-</div>
-</form></div>
-</section>
-<!-- Five --> <!--
+
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">John Allsop</a></h1>
+					<p><!--[-->Experienced MCAT Tutor in the NYC Area<!--]--><br />
+					<!--[-->99th+ Percentile<!--]--></p>
+				</header>
+				<nav id="nav">
+					<ul>
+						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#two">Things I Can Do For You</a></li>
+						<li><a href="#three">Testimonials</a></li>
+						<li><a href="#four">Contact</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+				</footer>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="one">
+								<div class="image main" data-position="center">
+									<img src="images/banner.jpg" alt="" />
+								</div>
+								<div class="container">
+									<header class="major">
+										<h2>Allsop Tutoring</h2>
+										<p><!--[-->Experience tutoring from a 99th+ perncetile MCATer<!--]--><br />
+										<!--[--><!--]-->.</p>
+									</header>
+									<p>provide MCAT tutoring both remotely and in-person. I have a 99th percentile MCAT score, with a 100th percentile score on C/P, B/B, and 99th percentile on P/S.</p>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two">
+								<div class="container">
+									<h3>Things I Can Do</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<ul class="feature-icons">
+										<li class="fa-code"><!--[-->Write all the code<!--]--></li>
+										<li class="fa-cubes"><!--[-->Stack small boxes<!--]--></li>
+										<li class="fa-book"><!--[-->Read books and stuff<!--]--></li>
+										<li class="fa-coffee"><!--[-->Drink much coffee<!--]--></li>
+										<li class="fa-bolt"><!--[-->Lightning bolt<!--]--></li>
+										<li class="fa-users"><!--[-->Shadow clone technique<!--]--></li>
+									</ul>
+								</div>
+							</section>
+
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>A Few Accomplishments</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Possibly broke spacetime<!--]--></h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Terraformed a small moon<!--]--></h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Snapped dark matter in the wild<!--]--></h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h3>Contact Me</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<form method="post" action="#">
+										<div class="row gtr-uniform">
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+											<div class="col-12">
+												<ul class="actions">
+													<li><input type="submit" class="primary" value="Send Message" /></li>
+													<li><input type="reset" value="Reset Form" /></li>
+												</ul>
+											</div>
+										</div>
+									</form>
+								</div>
+							</section>
+
+						<!-- Five -->
+						<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -427,14 +454,29 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								</div>
 							</section>
-						--></div>
-<!-- Footer -->
-<section id="footer">
-<div class="container">
-<ul class="copyright">
-<li>&copy; Allsop Tutoring. All rights reserved.</li>
-</ul>
-</div>
-</section>
-</div>
-<!-- Scripts -->
+						-->
+
+					</div>
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+							</ul>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
