--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Allsop Tutoring</title>
@@ -12,15 +11,15 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">John Allsop</a></h1>
-					<p><!--[-->Experienced MCAT Tutor in the NYC Area<!--]--><br />
-					<!--[-->99th+ Percentile<!--]--></p>
+					<h1 id="logo"><a href="#">Willis Corto</a></h1>
+					<p>I got reprogrammed by a rogue AI<br />
+					and now I'm totally cray</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do For You</a></li>
-						<li><a href="#three">Testimonials</a></li>
+						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#three">A Few Accomplishments</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -48,11 +47,11 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Allsop Tutoring</h2>
-										<p><!--[-->Experience tutoring from a 99th+ perncetile MCATer<!--]--><br />
-										<!--[--><!--]-->.</p>
+										<h2>Read Only</h2>
+										<p>Just an incredibly simple responsive site<br />
+										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>provide MCAT tutoring both remotely and in-person. I have a 99th percentile MCAT score, with a 100th percentile score on C/P, B/B, and 99th percentile on P/S.</p>
+									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 								</div>
 							</section>
 
@@ -62,12 +61,12 @@
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="fa-code"><!--[-->Write all the code<!--]--></li>
-										<li class="fa-cubes"><!--[-->Stack small boxes<!--]--></li>
-										<li class="fa-book"><!--[-->Read books and stuff<!--]--></li>
-										<li class="fa-coffee"><!--[-->Drink much coffee<!--]--></li>
-										<li class="fa-bolt"><!--[-->Lightning bolt<!--]--></li>
-										<li class="fa-users"><!--[-->Shadow clone technique<!--]--></li>
+										<li class="fa-code">Write all the code</li>
+										<li class="fa-cubes">Stack small boxes</li>
+										<li class="fa-book">Read books and stuff</li>
+										<li class="fa-coffee">Drink much coffee</li>
+										<li class="fa-bolt">Lightning bolt</li>
+										<li class="fa-users">Shadow clone technique</li>
 									</ul>
 								</div>
 							</section>
@@ -81,21 +80,21 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Possibly broke spacetime<!--]--></h4>
+												<h4>Possibly broke spacetime</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Terraformed a small moon<!--]--></h4>
+												<h4>Terraformed a small moon</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Snapped dark matter in the wild<!--]--></h4>
+												<h4>Snapped dark matter in the wild</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
@@ -462,7 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
