--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Allsop Tutoring. All rights reserved.</li><li>
+								<li>&copy; Allsop Tutoring Services. All rights reserved.</li><li>
 							</ul>
 						</div>
 					</section>
