--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#four">Rates</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -100,9 +101,19 @@
 									</div>
 								</div>
 							</section>
-
 						<!-- Four -->
 							<section id="four">
+								<div class="container">
+									<header class="major">
+										<h2>Rates and Packages</h2>
+										<p>Listed Rates</p>
+									</header>
+									<p>$$$</p>
+								</div>
+							</section>
+
+						<!-- Five -->
+							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Feel free to message me for a free consultation!</p>
