--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Feel free to message me for a free consultation!</p>
-									<form method="post" action="#">
+									<form method="post" action="https://formspree.io/nuevex@gmail.com">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
