--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Rates</a></li>
-						<li><a href="#five">Contact</a></li>
+						<li><a href="#two">Things I Can Do For You</a></li>
+						<li><a href="#three">Testimonials</a></li>
+						<li><a href="#four">Rates & Packages</a></li>
+						<li><a href="#five">Contact Me</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -61,12 +61,12 @@
 									<h3>Things I Can Do For You</h3>
 									<p>What my services entail</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">1</li>
+										<li class="fa-cubes">2</li>
+										<li class="fa-book">3</li>
+										<li class="fa-coffee">4</li>
+										<li class="fa-bolt">5</li>
+										<li class="fa-users">6</li>
 									</ul>
 								</div>
 							</section>
@@ -75,20 +75,20 @@
 							<section id="three">
 								<div class="container">
 									<h3>Testimonials</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Blurb about hearing from successful students</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>"Quote from Testimony 1"</h4>
+												<p>Short testimonial blurb.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>"Quote from Testimony 2"</h4>
+												<p>Short testimonial blurb.</p>
 											</div>
 										</article>
 									</div>
@@ -97,7 +97,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-										<h2>Rates and Packages</h2>
+										<h3>Rates and Packages</h3>
 										<p>Listed Rates</p>
 									<p>$$$</p>
 								</div>
