--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">John Allsop</a></h1>
 					<p>MCAT Tutor located in NYC<br />
-					Here to help you achieve your score</p>
+					Here to """"</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -49,9 +49,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>Allsop Tutoring</h2>
-										<p>Here to help you achieve your potential.</p>
+										<p>Tagline</p>
 									</header>
-									<p>I'm located in NYC and have achieved a 99th+ percentile MCAT, specifically I achieved a 132 in Physics/Chemistry and Biology/Biochemistry, and a 131 in Psychology/Sociology.</p>
+									<p>[About Me Blurb Placeholder] I'm located in NYC and have achieved a 99th+ percentile MCAT, specifically I achieved a 132 in Physics/Chemistry and Biology/Biochemistry, and a 131 in Psychology/Sociology.</p>
 								</div>
 							</section>
 
